# yet-another-faucet

./: .env.sample  Cargo.toml  README.md
src/: api.rs  main.rs  open_channel.rs
static/: index.html
