[package]
name = "faucet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-cors = "0.7.0"
actix-web = "4.5.1"
anyhow = "1.0.80"
bitcoin = "0.31.1"
bitcoincore-rpc = "0.18.0"
cln-rpc = { version = "0.1.7", optional = true }
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }

[features]
ln = ["cln-rpc"]
